k8s/40-istio/peerauthentication-strict.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: medplatform
spec:
  mtls:
    mode: STRICT
